fixed the overlapping question mark of the ask new question panel and removed default text from the course and section title fields of the pages.

--- a/public/stylesheets/rqra/questionList.css
+++ b/public/stylesheets/rqra/questionList.css
@@ -98,8 +98,12 @@ div#questionTabs div.tab {
 div#askNewQuestionText {
 	margin-top: 0.5em;
 	margin-bottom: 20px;
-	padding: 0.5em;
+	padding: 5px;
 	font-size: 1.5em;
+}
+
+div#askNewQuestionText a {
+	margin-left: 5px;
 }
 
 div#askNewQuestionText, a#askNewQuestionLink {
